# offline-oolama-desktop

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: spinner.jsx
