[package]
name = "private-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "private_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11.5"

ollama-rs = { version = "0.2.0", optional = true, default-features = false, features = [
    "chat-history",
    "rustls",
    "stream",
] }
langchain-rust = { version = "4.6.0", features = ["ollama"], optional = true }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tauri-plugin-log = "2"
reqwest = "0.12.9"
tauri-plugin-store = "2"

[features]
ollama = ["ollama-rs"]
default = ["ollama"]
